; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_cma.c_cma_ps_find.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_cma.c_cma_ps_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_bind_list = type { i32 }
%struct.net = type { i32 }
%struct.xarray = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rdma_bind_list* (%struct.net*, i32, i32)* @cma_ps_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rdma_bind_list* @cma_ps_find(%struct.net* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.xarray*, align 8
  store %struct.net* %0, %struct.net** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.net*, %struct.net** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.xarray* @cma_pernet_xa(%struct.net* %8, i32 %9)
  store %struct.xarray* %10, %struct.xarray** %7, align 8
  %11 = load %struct.xarray*, %struct.xarray** %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call %struct.rdma_bind_list* @xa_load(%struct.xarray* %11, i32 %12)
  ret %struct.rdma_bind_list* %13
}

declare dso_local %struct.xarray* @cma_pernet_xa(%struct.net*, i32) #1

declare dso_local %struct.rdma_bind_list* @xa_load(%struct.xarray*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
